stars behind and scroll fixed

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -24,7 +24,7 @@
 .main_home {
 height: 100vh;
 width: 100vw;
-overflow: auto;
+overflow-y: auto;
 
 }
 
@@ -37,6 +37,7 @@ padding-top: 51px;
 }
 
 .night_home {
+  z-index: -1;
   transform: rotate(0deg);
   position: relative;
   top: 140px;
